--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,14 @@
     "description": "Parses php-src stub files to generate DocBook documentation",
     "type": "project",
     "require": {
-        "php": "8.2",
-        "roave/better-reflection": "^6.42",
+        "php": "^8.2",
+        "roave/better-reflection": "^6.44",
         "ext-dom": "*",
         "ext-libxml": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.4"
+        "phpunit/phpunit": "^11.5",
+        "phpstan/phpstan": "^2.0.3"
     },
     "license": "MIT",
     "autoload": {
