--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "license": "MIT",
     "autoload": {
+        "files": ["src/utils.php"],
         "psr-4": {
             "Girgias\\StubToDocbook\\": "src/"
         }
