Add extension property to function metadata
This is needed in the future for the migration guide generation and creating/modifying functions in the documentation

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
             "Girgias\\StubToDocbook\\": "src/"
         }
     },
+    "autoload-dev": {
+      "psr-4": {
+        "Girgias\\StubToDocbook\\Tests\\": "tests/"
+      }
+    },
     "authors": [
         {
             "name": "Gina Peter Banyard",
