--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^12.3.15",
-        "phpstan/phpstan": "^2.1.29"
+        "phpstan/phpstan": "^2.1.29",
+        "friendsofphp/php-cs-fixer": "^3.94"
     },
     "license": "MIT",
     "autoload": {
